# shuttle-cch23

./: .env  .env.docker  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  init.sql
.github/workflows/: rust.yml  shuttle-deploy-1.yml  shuttle-deploy.yml
.sqlx/: query-3249141edb58c87a3a864e2dcb69371dffb300954608f16771bf8f417d1a6aa2.json  query-57508ed4395318929d86586d7911484a033c856b3f4922f6f4bc81145a3a6cb8.json  query-5e851da1fe96ef1f12863fc072f2172459b46a0aa7db76a781d6fc2a750e5e9a.json  query-5fa03fa72f8f2e624e65afb37b5f7ce140d4a94e06b59d1f52d0033a070fb00d.json  query-708e4766dc26235e76e96b91e362e7d30ea3337687aeaf1ef1813e43276e2c8a.json  query-7579e2dbe50e65ec5b590001ac739a46ff5be1de5c772f071879fdcf60147e84.json  query-aa005db52d7015df7f98044fb54d049a1845716929f3ceb38f23ce4c40df06f4.json  query-dd8c7537da3aff1cc0e38d2531c48c811da8384e6a1467ec4cdafdc582a5a288.json  query-e026233d468cfd19d24418bc450e59c604d3c9ac3b8142d03a53c6589f24fecd.json  query-e22e23aec6ea325ef94903a13e133ad8b4418244f0e808a4981f16d4a70a86af.json  query-e6e3a2a7631e904e53fef1f3ba334a66daa9301ab581316ec33aae6a1dc55487.json
migrations/: 20231223195723_reset_schema_db.down.sql  20231223195723_reset_schema_db.up.sql
src/: config.rs  lib.rs  main.rs  startup.rs
src/handlers/: day0.rs  day1.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs  tiebreaker.rs
templates/: day14.html
tests/: day22.rs
