[package]
name = "cch23-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros", "headers", "multipart"] }
base64 = "0.21.5"
fancy-regex = "0.12.0"
image = "0.24.7"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1"
tower-http = { version = "0.4.0", features = ["trace", "fs"] }
tracing = "0.1.40"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
axum-test-helper = "0.3.0"
